# tailscale-proxy

./: Cargo.toml  README.md
src/: main.rs  observability.rs  tls.rs
tailscale-localapi/: Cargo.toml
tailscale-localapi/src/: lib.rs  types.rs
tailscale-proxy/: Cargo.toml
tailscale-proxy/src/: http.rs  main.rs  tls.rs
