[package]
name = "tailscale-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.7"
color-eyre = "0.6.1"
eyre = "0.6.8"
futures = { version = "0.3.21", features = ["executor"] }
hyper = { version = "0.14.18", features = ["full"] }
lazy_static = "1.4.0"
rustls = "0.20.4"
tailscale-localapi = "0.2.0"
tokio = { version = "1.17.0", features = ["full"] }
tokio-rustls = "0.23.3"
tokio-stream = { version = "0.1.8", features = ["net"] }
tower = "0.4.12"
tower-layer = "0.3.1"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
