[package]
name = "tailscale-localapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
http = "0.2.6"
hyper = { version = "0.14.18", features = ["client", "http1"] }
rustls-pemfile = "1.0.0"
serde = { version = "1", features = ["derive"] }
serde-aux = "3.0.1"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["net", "rt"] }
tracing = "0.1.32"
